--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -36,12 +36,20 @@
       integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
       crossorigin="anonymous"
     ></script>
+    <!-- axios cdn -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
+      integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
     <!-- 1. nickname set & chat open page -->
     <div id="startPage">
       <h1 style="margin-bottom: 25px; color: #007bff">Jerrychat</h1>
       <div class="entry">
+        <input type="file" name="photo" id="photo" />
         <input
           style="width: 300px; margin: 20px; text-align: center"
           class="form-control"
@@ -64,11 +72,11 @@
       <!-- 2.1 chat-header -->
       <div class="header">
         <div class="header-img">
-          <img src="../static/img/odung.jpg" />
+          <img src="/uploads/odung.jpg" />
         </div>
         <div class="active">
-          <div>Jerry</div>
-          <div>지금 활동중</div>
+          <div class="title">Jerry</div>
+          <!-- <div>지금 활동중</div> -->
         </div>
         <div class="header-icons">
           <i class="fa fa-phone"></i>
@@ -127,6 +135,22 @@
         let nickname = $("#nickname").val();
         console.log(nickname);
         socket.emit("setNickname", nickname);
+
+        // file upload
+        const formData = new FormData();
+        const file = document.getElementById("photo");
+        console.log(file.files);
+        console.log(file.files[0]);
+        formData.append("photo", file.files[0]);
+
+        axios({
+          headers: {
+            "Content-Type": "multipart/form-data",
+          },
+          url: "/dynamicFile",
+          method: "post",
+          data: formData,
+        }).then((response) => console.log(response.data));
       }
 
       socket.on("err", (errMsg) => {
@@ -156,9 +180,10 @@
           $(".chat-main").append(`<div class="notice-chats">${notice}</div>`);
         });
 
-        socket.on("sendAll", (chatMsg, nickname, time, day, option) => {
+        socket.on("sendAll", (myId, chatMsg, nickname, time, day, option) => {
           let myMsg = $(".chatMsg").val();
           let dmMsg = "";
+          console.log(myId);
 
           if (option != "all") {
             dmMsg = "(소근)";
@@ -171,7 +196,7 @@
               <span class="time">${time} | ${day}</span>
             </div>
             <div class="chats-img outgoing-chats-img">
-              <img src="../static/img/odung.jpg" />
+              <img src="/uploads/${myId}.jpg" />
             </div>
             </div>`
             );
@@ -179,7 +204,7 @@
             $(".chat-main").append(
               `<div class="chats received-chats">
               <div class="chats-img received-chats-img">
-                <img src="../static/img/odung.jpg" />
+                <img src="/uploads/${myId}.jpg" />
               </div>
               <div class="chats-msg received-chats-msg">
                 <div class="chats-name">${nickname}${dmMsg}</div>
@@ -190,6 +215,10 @@
             );
           }
           $(".chatMsg").val("");
+
+          // scroll 자동으로 내려가게하는 코드
+          const chatMain = $(".chat-main");
+          chatMain.scrollTop(chatMain[0].scrollHeight);
         });
 
         socket.on("clientUpdate", (client) => {
@@ -201,10 +230,6 @@
           }
           $("#dm").html(option);
         });
-
-        // scroll 자동으로 내려가게하는 코드
-        const chatMain = $(".chat-main");
-        chatMain.scrollTop(chatMain[0].scrollHeight);
       }
     </script>
   </body>
